--- a/OEBPS/Text/c128.xhtml
+++ b/OEBPS/Text/c128.xhtml
@@ -11,223 +11,226 @@
 </head>
 
 <body>
-    <h1>128　改心の兆し</h1>
-    <p>　何者かがダンジョンをクリアし、ダンジョンが消え去った。</p>
-    <p>　グラシアンがその報告を聞いたのは、治療によって命を拾い、意識を取り戻した後の事であった。</p>
-    <p>　レスリーとの決闘で先制攻撃を譲った結果、空砲にしたはずの銃から何故か弾が出て普通に負けた所まではかろうじて覚えている。</p>
-    <p>　足に走った耐えがたい激痛もかろうじて記憶している。</p>
-    <p>　だがその先の記憶が一切ない。</p>
-    <p>　恐らくはあの後すぐに痛みに耐えきれずに失神したのだろうとグラシアンは考えた。</p>
-    <p>　弾を空砲とすり替えたはずの銃が何故弾を撃ちだしたのかは分からない。</p>
-    <p>　実はレスリーが弾をまだ隠し持っていて、決闘前に銃を確認して空砲に気付いて弾を込め直したのだろうか？</p>
-    <p>　側に控えている取り巻きの一人を睨むと、彼の肩がビクリと震える。</p>
-    <p>　彼にすり替えを命じたはずなのに、弾丸が出て来てグラシアンは決闘に負けた。</p>
-    <p>　その責を問われるのかと身構えているのだろう。</p>
-    <p>　実際グラシアンは反射的に彼に八つ当たりをしそうになったが……寸前で止めた。</p>
-    <p>　ここで彼に当たり散らしても、惨めさが増すだけだ。</p>
-    <p>　今更どう取り繕おうと、誰に当たり散らそうと、グラシアンが惨めな敗者である事は変わらない。</p>
-    <p>　それも最高にみっともない敗者だ。</p>
-    <p>　余裕をこいて先手を譲り、回避も防御もせずにそのまま弾丸を受け、痛みにみっともなく喚いて失神した。</p>
-    <p>　端から見ればこいつは一体何をしたかったんだ？　と思われても仕方のない負け方であった。</p>
-    <p>　既に下の下としか言いようのない状態だが、ここから更に恥の上塗りをするのはいかにグラシアンであっても耐えられない。</p>
+    <h1>128 转变的迹象</h1>
+    <p>有人通关了迷宫，迷宫消失了</p>
+    <p>格拉西兰听到这个报告是在通过治疗而捡回小命，恢复意识后的事。</p>
+    <p>在和莱斯利的决斗中，让她先发进攻的结果是，本应是空炮的枪不知为何出了子弹，到了普通输的地方还勉强记得。</p>
+    <p>勉强记得跑在脚上的难以忍受的剧痛。</p>
+    <p>但是在那之后完全没有记忆。</p>
+    <p>格拉西兰想，恐怕在那之后马上就因为无法忍受疼痛而昏迷了吧。</p>
+    <p>不知道本已把子弹换成空炮的枪为什么会发射子弹。</p>
+    <p>实际上莱斯利还隐藏着子弹，决斗前确认了枪，发现了空炮，重新投入了子弹吗？</p>
+    <p>盯着身边的一个人，他的肩膀瑟瑟发抖。</p>
+    <p>明明是命令他掉包的，但是子弹出来了，格拉西恩在决斗中输了。</p>
+    <p>或许是出于被追究责任的心理准备吧。</p>
+    <p>实际上，格拉西恩反射性地差点拿他出气……但在眼前阻止了他。</p>
+    <p>即使在这里对他大发雷霆，也只会增加他的惨状。</p>
+    <p>事到如今无论怎么掩饰，无论对谁乱发脾气，格拉西兰是悲惨的败者这一点是不会改变的。</p>
+    <p>那也是最难看的败者。</p>
+    <p>从容不迫地先下手，既不回避也不防御就那样受到子弹的攻击，因疼痛而不体面地叫唤而失神。</p>
+    <p>从一开始看这家伙到底想干什么？即使被认为是失败也没有办法。</p>
+    <p>虽然已经是只能说是最差的状态了，但是从这里再涂一层羞耻的话，无论是怎样的魅力都无法忍受。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">あー……くそっ！　魔法の使えない出来損ない風情が……</span>”</p>
+    <p>“<span class="character">“啊……可恶！无法使用魔法的残废风情……</span>”</p>
     <p></p>
     <p></p>
-    <p>　仕方なく、今ここにいない勝者を罵倒するが心に去来するのは惨めさと虚しさだけだ。</p>
-    <p>　何をどう言おうが負けは負け。</p>
-    <p>　レスリーを出来損ないと呼ぶならば、彼はその出来損ないにも劣る惨めな負け犬だ。</p>
-    <p>　貴族用の少し豪華なテントの天蓋を見ながら、グラシアンはポツリと呟く。</p>
+    <p>没办法，骂倒现在不在这里的胜利者，但心中萦回的只有凄惨和空虚。</p>
+    <p>不管怎么说，输了就是输。</p>
+    <p>如果把莱斯利称为“做得不好”的话，他是一个连做得不好都不如的惨败败犬。</p>
+    <p>看着贵族用的稍微豪华的帐篷的天盖，格兰西嘟囔着。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……すげえもんなんだな……あいつの作る道具っていうのは……</span>”</p>
+    <p>“<span class="character">……真厉害啊……那家伙做的道具是……</span>”</p>
     <p></p>
     <p></p>
-    <p>　グラシアンはここにきて初めて、レスリーへの評価を改めていた。</p>
-    <p>　それは己のプライドを守る為の無意識の心理的逃避だったのかもしれない。</p>
-    <p>　魔法の使えない出来損ないに負けた……のではなく、魔法以外に凄い部分を持っている奴に負けた……そう考える方が、まだ惨めさは薄れる。</p>
-    <p>　凄くない奴に負けた、よりは凄い奴に負けた、の方がまだマシだ。</p>
-    <p>　そんな考えが彼の中にあったのかもしれない。</p>
+    <p>格拉西兰来到这里后，第一次改变了对莱斯利的评价。</p>
+    <p>那可能是为了保护自己的自尊心而无意识的心理逃避吧。</p>
+    <p>输给了不会使用魔法的做损的人……而输给了除了魔法以外有着厉害部分的人……这样想的话，悲惨的感觉还很淡薄。</p>
+    <p>输给了没什么厉害的人和输给了更厉害的人相比，这样还更好。</p>
+    <p>不管怎么说，在格拉西兰的确发生了思想上的变化。</p>
     <p>　どちらにせよ、グラシアンの中で考えの変化が起こっているのは確かであった。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">よっ……と</span>”</p>
-    <p>“<span class="character">あの、まだ起き上がっては……</span>”</p>
-    <p>“<span class="character">うるせえ。このくらい問題ね……えヴェッ！</span>”</p>
+    <p>“<span class="character">哟……</span>”</p>
+    <p>“<span class="character">那个，还没起来……</span>”</p>
+    <p>“<span class="character">吵死了。这么大的问题啊……哎！</span>”</p>
     <p></p>
     <p></p>
-    <p>　ベッドから起き上がり、杖をつく。</p>
-    <p>　取り巻きのエルフェが何か言っているが、グラシアンは彼の心配を一蹴した。</p>
-    <p>　だが誰が見ても強がりだ。立ち上がった瞬間に激痛を感じ、顔をしかめてしまう。</p>
-    <p>　今まで出した事もない変な悲鳴も口から出てしまった。</p>
-    <p>　えヴェって何だ、えヴェって。</p>
+    <p>从床上起来，拄着拐杖。</p>
+    <p>虽然周围的精灵在说些什么，但格拉西恩却拒绝了他的担心。</p>
+    <p>但是无论谁看都很逞强。站起来的瞬间感到剧痛，皱起了眉头。</p>
+    <p>至今为止没有发出过的奇怪的悲鸣也从口中出来了。</p>
+    <p>嗯，什么啊，嗯。</p>
     <p></p>
     <p></p>
-    <p>“魔法による治療はされましたが、一歩間違えれば切断も止む無しという大怪我だったんです。</p>
-    <p>いきなり歩くのは無茶ですって”</p>
-    <p>“<span class="character">ちっ……分かったよ</span>”</p>
-    <p>“<span class="character">一体どこへ行こうとしてたんです？</span>”</p>
-    <p>“<span class="character">あ？　……あの出来……いや、レスリーの所だよ。文句あるのか？</span>”</p>
+    <p>“<span class="character">虽然被用魔法治疗过，但是一步走错的话切断也不会停止，是重伤。</span></p>
+    <p><span class="character">突然走太乱来了</span>”</p>
+    <p>“<span class="character">呃……我知道了</span>”</p>
+    <p>“<span class="character">你想去哪里？</span>”</p>
+    <p>“<span class="character">啊？…那个做出来的……不，莱斯利。怎么了吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　グラシアンはどうやらレスリーの所へ行こうとしていたらしい。</p>
-    <p>　その返答を聞き、以前に空砲へのすり替えを命じられたエルフェは一瞬目付きを鋭くした。</p>
-    <p>　グラシアンは気付いていないが、この男はメルセデス側に寝返ったスパイである。</p>
-    <p>　そしてグラシアンがレスリーに対し報復しようとしている素振りを見せたならばメルセデスに密告するよう命じられていた。</p>
+    <p>格拉西兰好像想去找莱斯利</p>
+    <p>听到这个回答后，以前被命令换成空炮的精灵瞬间目光锐利。</p>
+    <p>格拉西恩没有注意到，这个男人是回到梅赛德斯那边的间谍。</p>
+    <p>并且，如果格兰西表现出想要报复莱斯利的姿态的话，被命令向梅赛德斯告密。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">報復ですか？</span>”</p>
+    <p>“<span class="character">是报复吗？</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
     <p></p>
-    <p>　念のために確認をするとグラシアンは居心地が悪そうに視線を逸らした。</p>
-    <p>　それは彼にしては妙な反応だ。</p>
-    <p>　報復を考えているならばこんな反応はしない。</p>
-    <p>　もっと分かりやすく、“あいつに思い知らせてやる！”といった反応を見せるはずだ。</p>
-    <p>　しばらく沈黙し、それからグラシアンは歯切れ悪く話す。</p>
+    <p>为了慎重起见，确认了一下，格拉西兰的视线似乎很不舒服。</p>
+    <p>那个对他来说是奇怪的反应。</p>
+    <p>如果想报复的话就不会有这样的反应。</p>
+    <p>更容易理解，“让他知道你的想法！”应该会有这样的反应。</p>
+    <p>他沉默了一会儿，然后格兰西恩又口齿不清。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">なあ……もしだけどよ……俺が今までの事をあいつに謝ったら……少しは、俺達の関係が改善とか……そういうのはあると思うか？</span>”</p>
+    <p>“<span class="character">啊……虽然是这样，但是……如果我向那家伙道歉的话……稍微改善一下我们的关系……你觉得有这种事吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　ねえよ。</p>
-    <p>　そう言いたい気持ちをぐっと堪え、辛抱強く取り巻きは話を聞いた。</p>
-    <p>　もう既にどう考えても修復不可能な所まで自分で壊しておいて何を言っているのだこのボンボンは。</p>
-    <p>　この駄目な主人がレスリーに恋心を抱いている事は知っている。</p>
-    <p>　その裏返しとして素直になれず、子供染みた意地悪から始まってエスカレートしてきたのも知っている。</p>
-    <p>　だが好意の裏返しにしても今までがやりすぎだ。</p>
-    <p>　残念ながら、もうどうしようもないだろう。</p>
-    <p>　しかし悲しいかな、縦社会。それを馬鹿正直に言う事は出来ない。</p>
-    <p>　故に彼の選んだ返答は沈黙……無言を以て否定とした。</p>
+    <p>喂。</p>
+    <p>忍住了想说的心情，周围的人耐心地听了他的话。</p>
+    <p>自己弄到了无论怎么想都无法修复的地步，在说什么呢这个笨蛋。</p>
+    <p>知道这个废柴的老板对莱斯利抱有爱慕之心。</p>
+    <p>也知道，与此相反的是，他并没有变得坦率，而是从沾染了孩子的坏心眼开始逐步升级的。</p>
+    <p>但是，好意反过来说，至今为止做得太过了。</p>
+    <p>很遗憾，已经没办法了吧。</p>
+    <p>但是悲哀的是，纵向社会。不能把那个说得太老实。</p>
+    <p>所以他选择的回答是沉默……无言否定。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">……もういい。お前等、下がれ</span>”</p>
+    <p>“<span class="character">……够了。你们这些家伙，退下吧。</span>”</p>
     <p></p>
     <p></p>
-    <p>　グラシアンから退去を命じられ、取り巻き達はテントから出て行った。</p>
-    <p>　それを見届けてからグラシアンはベッドに寝ころび、天蓋を見る。</p>
-    <p>　今までレスリーの事を見下していたが、完膚なきまでに負けた事で多少彼女を見直した。</p>
-    <p>　すると、心に残ったのは今まで見ないようにしていた彼女への好意だ。</p>
-    <p>　これまではその好意と相手への蔑視が混ざり合い、あのような幼稚な攻撃性となって外に出てしまっていた。</p>
-    <p>　だがレスリーへの蔑視が薄れた事で、ようやく彼は自分の今までの行いを顧みる機会を得る事が出来たのだ。</p>
+    <p>被命令从格拉西兰撤退，围住的人们从帐篷里走了出去。</p>
+    <p>看到了那个之后，格拉西兰躺在床上，看了天盖。</p>
+    <p>虽然之前一直看不起莱斯利，但因为彻底失败多少改变了对她的看法。</p>
+    <p>于是，留在心里的是对至今为止都没见过的她的好感。</p>
+    <p>到现在为止那个好意和对对方的蔑视混杂在一起，成为那样幼稚的攻击性出来了。</p>
+    <p>但是由于对莱斯利的蔑视淡薄了，他终于有了回顾自己至今为止的行为的机会。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">これも今度、返してやるか</span>”</p>
+    <p>“<span class="character">这个下次也还给你吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　そう言ってグラシアンはベッド近くの小棚から本を取り出した。</p>
-    <p>　それはレスリーのテントを燃やす前に回収していた、彼女がよく読んでいた本だ。</p>
-    <p>　何か歴史的価値があるのかと思って拾ったまではよかったがグラシアン自身は勿論、取り巻きの誰も読む事が出来ずに、結局ただのゴミと結論付けて放置されていた。</p>
-    <p>　改めて本を開いても相変わらず見た事もない文字で書かれているせいで読めないし、グラシアンにはゴミにしか思えない。</p>
-    <p>　だがレスリーが大事にしていた事は知っている。</p>
-    <p>　前までなら返そうという発想そのものが出なかっただろうが、グラシアンの心には変化が訪れつつあった。</p>
-    <p>　子供は幼い時は根拠のない全能感を持っていて、年齢を重ねるごとにだんだんと、世界は何もかもが自分の思い通りになるわけではないという当たり前を知る。</p>
-    <p>　今まで貴族として何不自由してこなかったグラシアンは今回、見下していた相手に敗れて初めてそんな当たり前の事を実感したのかもしれない。</p>
-    <p>　ならばそれは、確かな成長の兆しであった。</p>
-    <p>　……惜しむらくは、それが余りに遅すぎたという事だろう。</p>
+    <p>这样说着，格拉西兰从床边的书架上拿出了书。</p>
+    <p>那是她在烧毁莱斯利的帐篷前回收的书。</p>
+    <p>本以为有什么历史价值，但没想到格拉西恩自己就不用说了，周围的人都读不懂，结果只是把垃圾和结论放在一边。</p>
+    <p>即使重新打开书，因为还是用以前从未见过的文字来写，所以读不出来，在格兰西亚只能认为是垃圾。</p>
+    <p>但是对莱斯利很重要。</p>
+    <p>如果是在之前的话，应该不会有想要归还的想法吧，但是在格兰西的心中，变化正在发生。</p>
+    <p>孩子小的时候有着没有根据的全能感，随着年龄的增长，渐渐地，知道了世界并不是所有的事情都能如愿以偿的。</p>
+    <p>至今为止作为贵族并没有什么不自由的格拉斯，这次也许是在输给看不起的对手之后才第一次体会到了这理所当然的事情。</p>
+    <p>如果是这样的话，那确实是成长的征兆。</p>
+    <p>……可惜的是，那太晚了吧。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">エルフェの貴族だな？</span>”</p>
+    <p>“<span class="character">你是精灵的贵族吧？</span>”</p>
     <p></p>
     <p></p>
-    <p>　突然、背後から聞き覚えの無い声が聞こえた。</p>
-    <p>　それと同時に誰かの腕が首に回され、声を封じられる。</p>
-    <p>　襲撃……！　グラシアンがその事実を認識するまでに要した時間は五秒ほどで、だが認識は新たな混乱を生んだ。</p>
-    <p>　一体何時からいた？　いや、何時入って来た？　音はなかった。外にいるはずの護衛はどうした。何をしている。いや、そもそも誰だコイツ。</p>
-    <p>　様々な思考が巡る中でグラシアンは唯一自由な視界だけを動かして襲撃者を視界の端に捉える。</p>
-    <p>　真後ろにいるせいで顔は見えない。だがチラチラと、黒い翼のようなものが見えた。</p>
+    <p>突然，从背后传来了耳生的声音。</p>
+    <p>与此同时，有人的手臂被转动到脖子上，声音也被封印了。</p>
+    <p>袭击……！格拉西恩在认识那个事实之前所花的时间只有5秒左右，但是认识产生了新的混乱。</p>
+    <p>到底从什么时候开始的？不，什么时候进来的？没有声音。应该在外面的护卫怎么了。你在干什么。不，这家伙本来就是谁。</p>
+    <p>在各种各样的思考循环中，格拉西恩只移动了唯一自由的视野，将袭击者捕捉到了视野的边缘。</p>
+    <p>因为在正后面所以看不见脸。但是，偶尔能看到像黑色翅膀一样的东西。</p>
     <p></p>
     <p></p>
-    <p>（鳥人フォーゲラ……！）</p>
+    <p>（鸟人福格拉……！）</p>
     <p></p>
     <p></p>
-    <p>　翼が生えているのは鳥人の証だ。</p>
-    <p>　ダンジョンには翼の生えた人型の魔物などもいるので絶対ではないが、混乱したグラシアンはそこまで思考を巡らせる事は出来なかった。</p>
-    <p>　そして考えを巡らせる前に何の警告もなく太ももに短刀を突きさされ、思考が恐怖と痛みだけで支配されてしまった。</p>
+    <p>长翅膀是鸟人的证明。</p>
+    <p>迷宫里也有长着翅膀的人型魔物，所以不是绝对的，但是混乱的格拉西恩却没能思考到那种程度。</p>
+    <p>然后在反复思考之前没有任何警告地将短刀刺入大腿，思考只被恐怖和疼痛所支配。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">…………っっ！</span>”</p>
-    <p>“これからいくつかお前に質問する。</p>
-    <p>叫んでも声は外に聞こえない。外の連中も気付かない。</p>
-    <p>逃げようとすれば苦しめてから殺す。</p>
-    <p>こちらの知りたい情報を吐けば楽に死なせてやる。</p>
-    <p>詐称は死までの苦痛が長引くと思え”</p>
-    <p>“<span class="character">ひっ……い……</span>”</p>
-    <p>“まず一つ目。この集落にあったダンジョンが何者かに攻略されて消えた。</p>
-    <p>攻略者に心当たりはあるか？　あるいはお前自身がそうか？”</p>
+    <p>“<span class="character">……呃！</span>”</p>
+    <p>“<span class="character">接下来我会问你几个问题。</span></p>
+    <p><span class="character">喊也听不到外面的声音。外面的人也没有注意到。</span></p>
+    <p><span class="character">如果你试图逃跑，你会受苦，然后被杀。</span></p>
+    <p><span class="character">吐出我方想知道的信息，我会让你轻松地死去。</span></p>
+    <p><span class="character">虚报到死为止的痛苦会持续很久</span>”</p>
+    <p>“<span class="character">呃……不……</span>”</p>
+    <p>“<span class="character">首先第一个。这个村子里的迷宫被什么人攻占后消失了。</span></p>
+    <p><span class="character">攻略者有线索吗？或者说你自己是这样吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　その問いにグラシアンは首をブンブンと振った。</p>
-    <p>　知らない。知るわけがない。</p>
-    <p>　そもそもダンジョンがクリアされたという情報だってついさっき知ったばかりの事だ。</p>
-    <p>　決してグラシアンは嘘を吐いていなかった。真実知らないのだから、知らない以外の答えがない。</p>
-    <p>　だが襲撃者はどうやら満足しなかったらしく、素早くグラシアンの腕を掴むと短刀を彼の指に当てた。</p>
+    <p>对于那个问题，格拉西兰摇了摇头。</p>
+    <p>不知道。不可能知道。</p>
+    <p>说起来刚刚才知道迷宫被清除了的消息。</p>
+    <p>格拉西兰绝对没有说谎。因为不知道真相，所以除了不知道以外没有其他答案。</p>
+    <p>然而，袭击者似乎并不满足，迅速抓住格拉西恩的手臂，将短刀放在了他的手指上。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">もう一度聞く。攻略者に心当たりはないか？　偽れば指を落とすぞ</span>”</p>
+    <p>“<span class="character">再问一遍。攻略者有线索吗？如果是假的话就把手指放下来。</span>”</p>
     <p></p>
     <p></p>
-    <p>◆</p>
+    <p class="divline"></p>
     <p></p>
     <p></p>
-    <p>　グラシアンにテントを追い出された取り巻き達は、それから一時間ほどテントの前で待機して護衛を続けていた。</p>
-    <p>　本当は自分達もさっさと別のテントに引っ込んで寝てしまいたいのだが、仕事なのだから仕方ない。</p>
-    <p>　半数が仮眠を取り、もう半数が護衛としてテントの周囲を守っている。</p>
-    <p>　グラシアンの金魚のフンのような彼等だが、あのボンボンを護衛しながらダンジョンを進めるだけあって意外と実力は高い。</p>
-    <p>　だからこそ、彼等は違和感に気付く事が出来た。</p>
+    <p>被格拉西赶出帐篷的包围者在帐篷前等待了一个小时左右，继续进行护卫。</p>
+    <p>其实他们自己也想早点搬到别的帐篷里睡觉，但是因为是工作所以没办法。</p>
+    <p>半数人小睡，半数以上的人作为护卫守护着帐篷周围。</p>
+    <p>他们就像格拉西亚的金鱼匈奴一样，但他们的能力出奇地高，因为他们在护送糖果的同时推进地牢。</p>
+    <p>正因为如此，他们才注意到了违和感。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">なあ、静かすぎないか？</span>”</p>
-    <p>“<span class="character">確かにな。テントの中から何の音も聞こえないが……寝ているだけじゃないのか？</span>”</p>
-    <p>“<span class="character">だと思うが、一応確認しておくか？</span>”</p>
-    <p>“<span class="character">けど勝手に入るとキレ散らかすからなあ、あの若様は</span>”</p>
+    <p>“<span class="character">喂，是不是太安静了？</span>”</p>
+    <p>“<span class="character">确实。从帐篷里什么声音都听不到……难道只是在睡觉吗？</span>”</p>
+    <p>“<span class="character">我觉得是这样，但还是先确认一下吧？</span>”</p>
+    <p>“<span class="character">但是随便进去的话，会弄得乱糟糟的，那个年轻人。</span>”</p>
     <p></p>
     <p></p>
-    <p>　本当ならば、護衛が一人もテントの中にいないというのはあってはならない事だ。</p>
-    <p>　ここはダンジョン攻略の為に急ごしらえで用意した集落の一角で、守りと言う点では普段グラシアンが暮らしている堅牢な屋敷とは比較にもならない。</p>
-    <p>　貴族同士でも暗殺者を差し向けての命の奪い合いなどは何処でもある事だし、グラシアンは普段の行いのせいであちこちから恨みも買っている。</p>
-    <p>　しかもすぐ近くには吸血鬼の集落もあるのだ。</p>
-    <p>　現在吸血鬼とエルフェは敵対関係にはないが、いつそうなってもおかしくはない。</p>
-    <p>　だからこそ本来ならば、貴族の寝泊まりする場所には必ず護衛の一人や二人は配置するべきなのだ。</p>
-    <p>　それをやらないのは余程腕に覚えのある者か、あるいは家から重要視されていない……よく言えば自由で悪く言えば放置されているレスリーのような者くらいだ。</p>
+    <p>本来，不能有一个警卫都不在帐篷里。</p>
+    <p>这里是为了攻占迷宫而紧急准备的村落的一角，在防守这一点上，与平时格兰西生活的坚固的住宅无法相比。</p>
+    <p>贵族之间也到处都有向暗杀者夺去生命的事，格拉西恩因为平时的行为而到处惹人怨恨。</p>
+    <p>而且附近也有吸血鬼的村落。</p>
+    <p>现在吸血鬼和精灵虽然没有敌对关系，但是什么时候变成那样也不奇怪。</p>
+    <p>正因为如此，本来的话，贵族住宿的地方一定要配备一个或两个护卫人员。</p>
+    <p>不做这件事的人，要么是相当有手腕的人，要么是家里不重视的人……说白了，就是那种自由且不说坏话的人。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">しゃーない。一応確認しておこうか。若様、起きていますか？</span>”</p>
+    <p>“<span class="character">没关系。先确认一下吧。年轻人，起来了吗？</span>”</p>
     <p></p>
     <p></p>
-    <p>　どうせ理不尽に叱られるんだろうなと思いながらも、仕事だから仕方ないと自分に言い聞かせて取り巻き達はテントの中を覗いた。</p>
-    <p>　すると彼等を待っていたのは予想通りのグラシアンの喚き声……ではなかった。</p>
-    <p>　むしろ逆だ。何も聞こえない。</p>
-    <p>　怒鳴り声は勿論、寝息すらも。</p>
-    <p>　代わりにあったのは夥しい血痕と、その中央で転がる……かろうじてグラシアンと分かる血塗れの何か。</p>
-    <p>　鼻腔を突く、強烈な……何故テントの外にいた時に誰も気付けなかったか分からない程の濃密な血の匂い。</p>
-    <p>　そして背を向けて立っている、実行犯と思われる……黒い翼を生やした誰かの後ろ姿。</p>
+    <p>虽然想着反正会被不讲理的骂，但是因为是工作所以没办法，所以周围的人在帐篷里偷看。</p>
+    <p>于是等待他们的并不是预想中的格兰西的喊声。</p>
+    <p>倒不如说是反了。什么也听不见。</p>
+    <p>怒吼声自不必说，就连睡觉的气息也。</p>
+    <p>取而代之的是大量的血迹和在其中央滚落的……好不容易才明白这是涂了血的什么东西。</p>
+    <p>刺鼻，强烈的……为什么在帐篷外面的时候谁都没有注意到的浓厚的血的味道。</p>
+    <p>然后背对着身站着，被认为是执行犯……长着黑色翅膀的某人的背影。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">曲者！</span>”</p>
+    <p>“<span class="character">坏蛋！</span>”</p>
     <p></p>
     <p></p>
-    <p>　取り巻き達はすぐに意識を戦闘へ切り替え、二人が左右から襲撃者へ突撃して剣を薙いだ。</p>
-    <p>　左右どちらに避けても、その場で立っていても当たる。</p>
-    <p>　突発的な出来事にも関わらずの息の合った連携だ。</p>
-    <p>　更に一秒の遅れもなく別の取り巻きがグラシアンに駆け寄り、残る取り巻きはテントの出口を塞いだ。</p>
-    <p>　だが襲撃者はその場で跳躍して剣を避けると、そのままテントを突き破って空へと逃げて行ってしまった。</p>
+    <p>包围着的人们立刻将意识转换成战斗，两人从左右向袭击者突击剃刀。</p>
+    <p>左右两边都可以避开，站在那里也可以。</p>
+    <p>这是与突发事件无关的默契合作。</p>
+    <p>更加没有一秒的迟延，其他的包围跑到了格拉西，剩下的包围堵住了帐篷的出口。</p>
+    <p>但是袭击者当场跳跃躲过剑，就这样冲破帐篷逃到了空中。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">おい、若はどうだ！？</span>”</p>
-    <p>“<span class="character">……駄目だ。どうしようもない</span>”</p>
+    <p>“<span class="character">喂，年轻人怎么样！？</span>”</p>
+    <p>“<span class="character">……不行。没办法。</span>”</p>
     <p></p>
     <p></p>
-    <p>　グラシアンに駆け寄った取り巻きは、一目見てもう手遅れだと判断を下した。</p>
-    <p>　傷が多すぎるし深すぎる。</p>
-    <p>　まるで拷問でも受けたかのようにあちこちが刻まれたその身体はもう、エルフェの形をしていない。</p>
+    <p>跑到格拉西兰的周围，一看就判断为时已晚。</p>
+    <p>伤口太多太深。</p>
+    <p>就像是被拷打过似的，被刻在各处的那个身体，已经没有了精灵的形状。</p>
     <p></p>
     <p></p>
+    <p class="divline"></p>
     <p></p>
-    <p>　フォーゲラらしき襲撃者によるエルフェの貴族殺害。</p>
-    <p>　このニュースは瞬く間に広がり、何者かによるダンジョン攻略に沸き立っていた集落を騒然とさせた。</p>
-    <p>ちなみにミズガルズ在住の黒翼の覇王さんは容疑を否認しております。</p>
+    <p>因类似福格拉的袭击者而杀害了埃尔菲的贵族。</p>
+    <p>这个消息瞬间传开，引起了不知何人攻占地下城的群落的骚动。</p>
+    <p>顺便说一下，住在米兹伽尔兹的黑翼霸王否认了自己的嫌疑。</p>
+    <p><span class="comment translator">ミズガルズ 米兹伽尔兹 作者另一部作品《野生的最终BOSS出现了》的星球</span></p>
+    <p><span class="comment translator">黒翼の覇王 露法斯·玛法尔 作者另一部作品《野生的最终BOSS出现了》的主角</span></p>
 </body>
 
 </html>
