140话标题翻译补充

--- a/OEBPS/Text/c140.xhtml
+++ b/OEBPS/Text/c140.xhtml
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>140　捨てられそうなのでダンジョンを制覇する</h1>
+    <h1>140 因为快要被抛弃了，所以称霸迷宫</h1>
     <p>通过这次的事情，我明白了两个人都是笨蛋这件事。</p>
     <p></p>
     <p>梅赛德斯的母亲，伯恩哈特的妻子之一的琉迪亚抱着胳膊惊讶地说着。在她面前，一对傻父女像一对好朋友一样并排躺在床上，把头扭向一边。</p>
